; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ppc/extr_ppc.c_ppc_ecp_sync.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ppc/extr_ppc.c_ppc_ecp_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ppc_data = type { i32, i32 }

@PPB_ECP = common dso_local global i32 0, align 4
@PPC_ECR_EPP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"ECP sync failed as data still present in FIFO.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ppc_ecp_sync(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.ppc_data*, align 8
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.ppc_data* @DEVTOSOFTC(i32 %7)
  store %struct.ppc_data* %8, %struct.ppc_data** %6, align 8
  %9 = load %struct.ppc_data*, %struct.ppc_data** %6, align 8
  %10 = call i32 @PPC_ASSERT_LOCKED(%struct.ppc_data* %9)
  %11 = load %struct.ppc_data*, %struct.ppc_data** %6, align 8
  %12 = getelementptr inbounds %struct.ppc_data, %struct.ppc_data* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @PPB_ECP, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %25, label %17

17:                                               ; preds = %1
  %18 = load %struct.ppc_data*, %struct.ppc_data** %6, align 8
  %19 = getelementptr inbounds %struct.ppc_data, %struct.ppc_data* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @PPB_ECP, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %17
  store i32 0, i32* %2, align 4
  br label %52

25:                                               ; preds = %17, %1
  %26 = load %struct.ppc_data*, %struct.ppc_data** %6, align 8
  %27 = call i32 @r_ecr(%struct.ppc_data* %26)
  store i32 %27, i32* %5, align 4
  %28 = load i32, i32* %5, align 4
  %29 = and i32 %28, 224
  %30 = load i32, i32* @PPC_ECR_EPP, align 4
  %31 = icmp ne i32 %29, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %25
  store i32 0, i32* %2, align 4
  br label %52

33:                                               ; preds = %25
  store i32 0, i32* %4, align 4
  br label %34

34:                                               ; preds = %46, %33
  %35 = load i32, i32* %4, align 4
  %36 = icmp slt i32 %35, 100
  br i1 %36, label %37, label %49

37:                                               ; preds = %34
  %38 = load %struct.ppc_data*, %struct.ppc_data** %6, align 8
  %39 = call i32 @r_ecr(%struct.ppc_data* %38)
  store i32 %39, i32* %5, align 4
  %40 = load i32, i32* %5, align 4
  %41 = and i32 %40, 1
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %44

43:                                               ; preds = %37
  store i32 0, i32* %2, align 4
  br label %52

44:                                               ; preds = %37
  %45 = call i32 @DELAY(i32 100)
  br label %46

46:                                               ; preds = %44
  %47 = load i32, i32* %4, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %4, align 4
  br label %34

49:                                               ; preds = %34
  %50 = load i32, i32* %3, align 4
  %51 = call i32 @device_printf(i32 %50, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %52

52:                                               ; preds = %49, %43, %32, %24
  %53 = load i32, i32* %2, align 4
  ret i32 %53
}

declare dso_local %struct.ppc_data* @DEVTOSOFTC(i32) #1

declare dso_local i32 @PPC_ASSERT_LOCKED(%struct.ppc_data*) #1

declare dso_local i32 @r_ecr(%struct.ppc_data*) #1

declare dso_local i32 @DELAY(i32) #1

declare dso_local i32 @device_printf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
